@@ -202,6 +202,38 @@
 			<key>Content</key>
 			<dict>
 				<key>PBXProjectModuleGUID</key>
+				<string>43B5858D131FD8C900153468</string>
+				<key>PBXProjectModuleLabel</key>
+				<string></string>
+				<key>PBXSplitModuleInNavigatorKey</key>
+				<dict>
+					<key>Split0</key>
+					<dict>
+						<key>PBXProjectModuleGUID</key>
+						<string>43B585A2131FDAD400153468</string>
+						<key>PBXProjectModuleLabel</key>
+						<string></string>
+					</dict>
+					<key>SplitCount</key>
+					<string>1</string>
+				</dict>
+				<key>StatusBarVisibility</key>
+				<true/>
+			</dict>
+			<key>Geometry</key>
+			<dict>
+				<key>Frame</key>
+				<string>{{0, 20}, {1137, 680}}</string>
+				<key>PBXModuleWindowStatusBarHidden2</key>
+				<false/>
+				<key>RubberWindowFrame</key>
+				<string>50 57 1137 721 0 0 1280 778 </string>
+			</dict>
+		</dict>
+		<dict>
+			<key>Content</key>
+			<dict>
+				<key>PBXProjectModuleGUID</key>
 				<string>43B58567131F9EF900153468</string>
 				<key>PBXProjectModuleLabel</key>
 				<string>AbstractDetailViewController.m</string>
@@ -213,10 +245,6 @@
 						<string>43B5856A131FA8B200153468</string>
 						<key>PBXProjectModuleLabel</key>
 						<string>AbstractDetailViewController.m</string>
-						<key>_historyCapacity</key>
-						<integer>0</integer>
-						<key>bookmark</key>
-						<string>43B585BD131FE17900153468</string>
 						<key>history</key>
 						<array>
 							<string>43B58558131F9DAA00153468</string>
@@ -236,46 +264,6 @@
 				<false/>
 				<key>RubberWindowFrame</key>
 				<string>2 56 1278 722 0 0 1280 778 </string>
-			</dict>
-		</dict>
-		<dict>
-			<key>Content</key>
-			<dict>
-				<key>PBXProjectModuleGUID</key>
-				<string>43B5858D131FD8C900153468</string>
-				<key>PBXProjectModuleLabel</key>
-				<string>Database.m</string>
-				<key>PBXSplitModuleInNavigatorKey</key>
-				<dict>
-					<key>Split0</key>
-					<dict>
-						<key>PBXProjectModuleGUID</key>
-						<string>43B585A2131FDAD400153468</string>
-						<key>PBXProjectModuleLabel</key>
-						<string>Database.m</string>
-						<key>_historyCapacity</key>
-						<integer>0</integer>
-						<key>bookmark</key>
-						<string>43B585BE131FE17900153468</string>
-						<key>history</key>
-						<array>
-							<string>43B585A3131FDAD400153468</string>
-						</array>
-					</dict>
-					<key>SplitCount</key>
-					<string>1</string>
-				</dict>
-				<key>StatusBarVisibility</key>
-				<true/>
-			</dict>
-			<key>Geometry</key>
-			<dict>
-				<key>Frame</key>
-				<string>{{0, 20}, {1137, 680}}</string>
-				<key>PBXModuleWindowStatusBarHidden2</key>
-				<false/>
-				<key>RubberWindowFrame</key>
-				<string>50 57 1137 721 0 0 1280 778 </string>
 			</dict>
 		</dict>
 	</array>
@@ -310,6 +298,8 @@
 			<key>Layout</key>
 			<array>
 				<dict>
+					<key>BecomeActive</key>
+					<true/>
 					<key>ContentConfiguration</key>
 					<dict>
 						<key>PBXBottomSmartGroupGIDs</key>
@@ -351,7 +341,7 @@
 							<key>PBXSmartGroupTreeModuleOutlineStateSelectionKey</key>
 							<array>
 								<array>
-									<integer>0</integer>
+									<integer>11</integer>
 								</array>
 							</array>
 							<key>PBXSmartGroupTreeModuleOutlineStateVisibleRectKey</key>
@@ -374,7 +364,7 @@
 							<real>227</real>
 						</array>
 						<key>RubberWindowFrame</key>
-						<string>-1 55 1276 723 0 0 1280 778 </string>
+						<string>4 55 1276 723 0 0 1280 778 </string>
 					</dict>
 					<key>Module</key>
 					<string>PBXSmartGroupTreeModule</string>
@@ -390,7 +380,7 @@
 								<key>PBXProjectModuleGUID</key>
 								<string>1CE0B20306471E060097A5F4</string>
 								<key>PBXProjectModuleLabel</key>
-								<string>Localizable.strings</string>
+								<string>RentManagerAppDelegate.m</string>
 								<key>PBXSplitModuleInNavigatorKey</key>
 								<dict>
 									<key>Split0</key>
@@ -398,17 +388,14 @@
 										<key>PBXProjectModuleGUID</key>
 										<string>1CE0B20406471E060097A5F4</string>
 										<key>PBXProjectModuleLabel</key>
-										<string>Localizable.strings</string>
+										<string>RentManagerAppDelegate.m</string>
 										<key>_historyCapacity</key>
 										<integer>0</integer>
 										<key>bookmark</key>
-										<string>43B585BC131FE17900153468</string>
+										<string>43523102131FEAE700E1BB38</string>
 										<key>history</key>
 										<array>
-											<string>43B5859C131FDAD400153468</string>
-											<string>43B5859D131FDAD400153468</string>
-											<string>43B5859E131FDAD400153468</string>
-											<string>43B5859F131FDAD400153468</string>
+											<string>435230F0131FEA3500E1BB38</string>
 										</array>
 									</dict>
 									<key>SplitCount</key>
@@ -420,18 +407,16 @@
 							<key>GeometryConfiguration</key>
 							<dict>
 								<key>Frame</key>
-								<string>{{0, 0}, {1027, 345}}</string>
+								<string>{{0, 0}, {1027, 483}}</string>
 								<key>RubberWindowFrame</key>
-								<string>-1 55 1276 723 0 0 1280 778 </string>
+								<string>4 55 1276 723 0 0 1280 778 </string>
 							</dict>
 							<key>Module</key>
 							<string>PBXNavigatorGroup</string>
 							<key>Proportion</key>
-							<string>345pt</string>
+							<string>483pt</string>
 						</dict>
 						<dict>
-							<key>BecomeActive</key>
-							<true/>
 							<key>ContentConfiguration</key>
 							<dict>
 								<key>PBXProjectModuleGUID</key>
@@ -442,14 +427,14 @@
 							<key>GeometryConfiguration</key>
 							<dict>
 								<key>Frame</key>
-								<string>{{0, 350}, {1027, 332}}</string>
+								<string>{{0, 488}, {1027, 194}}</string>
 								<key>RubberWindowFrame</key>
-								<string>-1 55 1276 723 0 0 1280 778 </string>
+								<string>4 55 1276 723 0 0 1280 778 </string>
 							</dict>
 							<key>Module</key>
 							<string>XCDetailModule</string>
 							<key>Proportion</key>
-							<string>332pt</string>
+							<string>194pt</string>
 						</dict>
 					</array>
 					<key>Proportion</key>
@@ -468,9 +453,9 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>43B584CE131F7F3200153468</string>
+				<string>435230F2131FEA3500E1BB38</string>
 				<string>1CE0B1FE06471DED0097A5F4</string>
-				<string>43B584CF131F7F3200153468</string>
+				<string>435230F3131FEA3500E1BB38</string>
 				<string>1CE0B20306471E060097A5F4</string>
 				<string>1CE0B20506471E060097A5F4</string>
 			</array>
@@ -610,17 +595,16 @@
 	<integer>5</integer>
 	<key>WindowOrderList</key>
 	<array>
-		<string>43B585BF131FE17900153468</string>
 		<string>1C530D57069F1CE1000CFCEE</string>
-		<string>43B5856C131FA8B200153468</string>
-		<string>43B5856D131FA8B200153468</string>
+		<string>435230F4131FEA3500E1BB38</string>
+		<string>435230F5131FEA3500E1BB38</string>
 		<string>1C78EAAD065D492600B07095</string>
 		<string>1CD10A99069EF8BA00B06720</string>
 		<string>4378EA6F1150F730002AA27D</string>
 		<string>/Users/benjamin/dev/os/LentManager/LentManager.xcodeproj</string>
 	</array>
 	<key>WindowString</key>
-	<string>-1 55 1276 723 0 0 1280 778 </string>
+	<string>4 55 1276 723 0 0 1280 778 </string>
 	<key>WindowToolsV3</key>
 	<array>
 		<dict>
@@ -641,7 +625,7 @@
 								<key>PBXProjectModuleGUID</key>
 								<string>1CD0528F0623707200166675</string>
 								<key>PBXProjectModuleLabel</key>
-								<string>&lt;No Editor&gt;</string>
+								<string></string>
 								<key>StatusBarVisibility</key>
 								<true/>
 							</dict>
@@ -699,7 +683,7 @@
 			<key>TableOfContents</key>
 			<array>
 				<string>4378EA6F1150F730002AA27D</string>
-				<string>43B584D0131F7F3200153468</string>
+				<string>435230CE131FE8E200E1BB38</string>
 				<string>1CD0528F0623707200166675</string>
 				<string>XCMainBuildResultsModuleGUID</string>
 			</array>
@@ -743,8 +727,8 @@
 										<string>yes</string>
 										<key>sizes</key>
 										<array>
-											<string>{{0, 0}, {379, 298}}</string>
-											<string>{{379, 0}, {453, 298}}</string>
+											<string>{{0, 0}, {379, 299}}</string>
+											<string>{{379, 0}, {453, 299}}</string>
 										</array>
 									</dict>
 									<key>VerticalSplitView</key>
@@ -759,8 +743,8 @@
 										<string>yes</string>
 										<key>sizes</key>
 										<array>
-											<string>{{0, 0}, {832, 298}}</string>
-											<string>{{0, 298}, {832, 262}}</string>
+											<string>{{0, 0}, {832, 299}}</string>
+											<string>{{0, 299}, {832, 261}}</string>
 										</array>
 									</dict>
 								</dict>
@@ -793,7 +777,7 @@
 										<real>223</real>
 									</array>
 									<key>Frame</key>
-									<string>{{379, 0}, {453, 298}}</string>
+									<string>{{379, 0}, {453, 299}}</string>
 									<key>RubberWindowFrame</key>
 									<string>103 177 832 601 0 0 1280 778 </string>
 								</dict>
@@ -821,13 +805,13 @@
 			<key>TableOfContents</key>
 			<array>
 				<string>1CD10A99069EF8BA00B06720</string>
-				<string>43B584ED131F864600153468</string>
+				<string>435230CF131FE8E200E1BB38</string>
 				<string>1C162984064C10D400B95A72</string>
-				<string>43B584EE131F864600153468</string>
-				<string>43B584EF131F864600153468</string>
-				<string>43B584F0131F864600153468</string>
-				<string>43B584F1131F864600153468</string>
-				<string>43B584F2131F864600153468</string>
+				<string>435230D0131FE8E200E1BB38</string>
+				<string>435230D1131FE8E200E1BB38</string>
+				<string>435230D2131FE8E200E1BB38</string>
+				<string>435230D3131FE8E200E1BB38</string>
+				<string>435230D4131FE8E200E1BB38</string>
 			</array>
 			<key>ToolbarConfiguration</key>
 			<string>xcode.toolbar.config.debugV3</string>
@@ -854,14 +838,12 @@
 							<key>Dock</key>
 							<array>
 								<dict>
-									<key>BecomeActive</key>
-									<true/>
 									<key>ContentConfiguration</key>
 									<dict>
 										<key>PBXProjectModuleGUID</key>
 										<string>1CDD528C0622207200134675</string>
 										<key>PBXProjectModuleLabel</key>
-										<string>RentIncomingViewController.m</string>
+										<string></string>
 										<key>StatusBarVisibility</key>
 										<true/>
 									</dict>
@@ -882,6 +864,8 @@
 							<string>442pt</string>
 						</dict>
 						<dict>
+							<key>BecomeActive</key>
+							<true/>
 							<key>ContentConfiguration</key>
 							<dict>
 								<key>PBXProjectModuleGUID</key>
@@ -917,8 +901,8 @@
 			<key>TableOfContents</key>
 			<array>
 				<string>1C530D57069F1CE1000CFCEE</string>
-				<string>43B58593131FDA1500153468</string>
-				<string>43B58594131FDA1500153468</string>
+				<string>435230D6131FE8E200E1BB38</string>
+				<string>435230D7131FE8E200E1BB38</string>
 				<string>1CDD528C0622207200134675</string>
 				<string>1CD0528E0623707200166675</string>
 			</array>
@@ -946,8 +930,6 @@
 					<key>Dock</key>
 					<array>
 						<dict>
-							<key>BecomeActive</key>
-							<true/>
 							<key>ContentConfiguration</key>
 							<dict>
 								<key>PBXProjectModuleGUID</key>
@@ -983,7 +965,7 @@
 			<key>TableOfContents</key>
 			<array>
 				<string>1C78EAAD065D492600B07095</string>
-				<string>43B58562131F9EF100153468</string>
+				<string>435230D8131FE8E200E1BB38</string>
 				<string>1C78EAAC065D492600B07095</string>
 			</array>
 			<key>ToolbarConfiguration</key>
