@@ -1,5 +1,13 @@
 2011-03-03	Benjamin Mies	<bmi@os-cillation.de>
 	* LentManager.xcodeproj/benjamin.mode1v3,
+	  LentManager.xcodeproj/project.pbxproj,
+	  LentManager.xcodeproj/benjamin.pbxuser,
+	  Classes/RentManagerAppDelegate.m,
+	  InitialDefaults.plist:
+	  - Kleinere Anpassungen.
+
+2011-03-03	Benjamin Mies	<bmi@os-cillation.de>
+	* LentManager.xcodeproj/benjamin.mode1v3,
 	  LentManager.xcodeproj/benjamin.pbxuser,
 	  AboutViewController.xib,
 	  Database.h,
